[package]
name = "calcify"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
license-file = "LICENSE"
repository = "https://github.com/bepri/calcify"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "calcify"
crate-type = ["cdylib"]

[dependencies]
pyo3 = "0.22.0"
