[build-system]
requires = ["maturin>=1.7,<2.0"]
build-backend = "maturin"

[project]
name = "calcify"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "License :: Apache-2.0",
    "License :: MIT",
]
dynamic = ["version"]
[tool.maturin]
features = ["pyo3/extension-module"]
